# langgraph_supervisor_mcps

./: .gitignore  README.md  app.py  docker-compose.yml  mcp_tools.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  tools.py
backend/: Dockerfile  create_user_docker.py  mcp_config.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251207_add_memory_tables.py  20251207_base_schema.py  20251207_user_scoped_memory.py
backend/app/: __main__.py  main.py
backend/app/api/: auth.py  chat.py
backend/app/core/: config.py  cors_config.py  logging_config.py  security.py  user_manager.py  websocket_auth.py
backend/app/db/: models.py  session.py
backend/app/memory/: __init__.py  embedding_client.py  procedural_memory.py  semantic_memory.py  vector_store.py
backend/app/services/: title_generator.py
backend/app/services/agents/: __init__.py  db_agent_guide.md  mcp_tools.py  supervisor.py  tools.py
backend/scripts/: test_memory.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: LanguageSwitcher.jsx  MarkdownRenderer.jsx  Sidebar.jsx
frontend/src/context/: authStore.js  axiosConfig.js  languageStore.js
frontend/src/pages/: Chat.jsx  Login.jsx  Register.jsx
