[project]
name = "langraph-supervisor"
version = "0.1.0"
description = "LangGraph Supervisor - Production-ready FastAPI + React application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "websockets>=14.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.14.0",
    # Authentication
    "fastapi-users[sqlalchemy]>=12.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # LangChain and LangGraph
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph-supervisor>=0.0.31",
    # Utilities
    "requests>=2.32.0",
    "langchain-openai>=1.1.0",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
